apps/devflux-artifact-network/networkpolicy-playerok-pre-dev-minio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-playerok-pre-dev-to-minio
  namespace: devops-tools
spec:
  podSelector:
    matchLabels:
      app: minio
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: playerok-pre-dev
      ports:
        - protocol: TCP
          port: 9000
