apps/devflux-artifact-network/networkpolicy-playerok-pre-dev-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-playerok-pre-dev-to-postgres
  namespace: databases
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: playerok-pre-dev
      ports:
        - protocol: TCP
          port: 5432
